# Umshini-Client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  game_client.py  pyproject.toml  setup.py  testAgentKaanEdit.py  testClient.py  testFourClients.py  testFourTournamentClients.py  testTournamentClients.py  test_agent.py  test_client.py  test_compression.py  test_one.py  test_tournament_clients.py  usage_copy.md  working_requirements.txt
.github/workflows/: linux-test.yml  macos-test.yml  pre-commit.yml  python-publish.yml  server-integration.yml  windows-test.yml
Umshini/: __init__.py  example_client.py  learner.py  tournament_client.py
Umshini/envs/: __init__.py  envs_list.py
Umshini/utils/: compress.py  socket_wrap.py  test_compression.py
colosseum/: __init__.py  example_client.py  game_client.py  old_test_agent.py  testAgentKaanEdit.py  test_agent.py  test_tournament_client.py  tournament_client.py  tournament_clients.py
envs/: envs_list.py
examples/: connect_four.py  example_policy.py  surround.py  test_one.py
tests/: conftest.py  test_client.py  test_environment_verification.py  test_local_game.py  test_umshini_client.py  test_validate_action.py
umshini/: __init__.py  example_client.py  learner.py  tournament_client.py
umshini/envs/: __init__.py  envs_list.py
umshini/examples/: connect_four.py  example_agent.py  example_cli.py  local_game.py
umshini/utils/: compress.py  test_compression.py  validate_action.py
utils/: __init__.py
