# pyproject.toml

include = [
    "umshini/**",
]

[build-system]
requires      = ["setuptools>=61.0.0", "wheel", ]
build-backend = "setuptools.build_meta"

[project]
name = "umshini"
readme = "README.md"
description = "Umshini client for playing in MARL tournaments"
authors = [{ name = "Jordan K. Terry", email = "j.k.terry@swarmlabs.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = ["Reinforcement Learning", "game", "RL", "AI", "gym"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "Cython>=0.29.21",
    "pettingzoo>=1.24.0" ,
    "halo",
    "colorama",
]
dynamic = ["version"]

[project.optional-dependencies]
classic = ["pettingzoo[classic]>=1.24.0"]
llm = ["chatarena[umshini]>=0.1.12.10"]
all = ["pettingzoo[classic]>=1.24.0", "chatarena[umshini]>=0.1.12.10"]
testing = [ "pytest", "pytest-cov" ]

[tool.setuptools.dynamic]
version = {attr = "umshini.__version__"}

[project.urls]
Repository = "https://github.com/Umshini/Umshini-Server/"
"Bug Report" = "https://github.com/Umshini/Umshini-Server/issues"

[tool.pytest.ini_options]
addopts = [ "--cov=umshini", "--cov-branch", "--cov-context=test", "--cov-report=html", "--cov-report=term-missing", "--ignore-glob=*/__init__.py"]

[tool.coverage.run]
omit = [ "umshini/examples/connect_four.py", "umshini/examples/example_cli.py" ]
